[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-dev-pipeline"
version = "0.1.0"
description = "Engineering knowledge graph that drafts LinkedIn content from GitHub activity. Human-in-the-loop."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "davidnichols-ops" }]
dependencies = [
    "PyGithub>=2.3",
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
ldp = "ldp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long SQL / prompt string literals are intentional
